# Viusual_Companion_Robot

./: .gitattributes  .gitignore  HANDBOOK.md  PRODUCT.md  README.md  architecture_design.md  environment.yml  pyproject.toml
main/: README.md  app.py  pyproject.toml  requirements.txt
main/config/: app.yaml  board.env.example  local.env.board  local.env.example  mouth_shapes.json  requirements-board.txt  tts_models.json
main/docs/: architecture.md  board-deployment.md  external_reference_assessment.md  live2d_control_protocol.md  live2d_model_usage.md  model-provenance.md  python-runtime.md  tasks.md  voxcpm_tts_route.md
main/live2d_stage/: THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  vite.config.mjs
main/live2d_stage/scripts/: check-stage.mjs  test-offline-audio.mjs
main/live2d_stage/src/: active-speaker-client.js  emotion-onnx-client.js  offline-asr-client.js  pcm-capture-processor.js  perception-client.js  runtime-config.js  stage.js  styles.css
main/live2d_stage/tests/: active-speaker-client.test.js  perception-client.test.js  realtime-asr-client.test.js  runtime-config.test.js
main/miniprogram/: README.md  THIRD_PARTY_NOTICES.md  game.js  game.json  package-lock.json  package.json  project.config.json
main/miniprogram/core/: actions.js  api-client.js  audio-controller.js  avatar-controller.js  config.js  error-message.js  pcm-segmenter.js  perception-controller.js  protocol.js  realtime-asr-client.js  realtime-vision-client.js  runtime-compat.js
main/miniprogram/game/: companion-game.js  layout.js  main.js  view.js
main/miniprogram/libs/: live2d.min.js  live2dcubismcore.min.js
main/miniprogram/scripts/: check-miniprogram.mjs
main/miniprogram/tests/: api-client.test.js  controller-lifecycle.test.js  game-layout.test.js  live2d-core.test.js  pcm-segmenter.test.js  protocol.test.js  realtime-asr-client.test.js  realtime-vision-client.test.js  vision-integration.test.js
main/models/moondream2/: config.json  moondream.py  tokenizer.json  tokenizer_config.json
main/models/voxcpm/: README.md
main/native/rk3588_vlm/: README.md  vlm_worker.cpp
main/scripts/: check_python_compat.py  generate_control_plan.py  generate_mouth_visual_test.py  live2d_control_server.py  run_board.sh  test_live2d_assets.py  test_voxcpm_hf_space.py
main/src/visual_companion_robot/: __init__.py
main/tests/: test_active_speaker.py  test_board_runtime_contracts.py  test_board_vision.py  test_config_and_live2d.py  test_emotion_backend.py  test_export_yolo_rknn.py  test_face_analysis.py  test_live2d_stage_frontend.py  test_llm_control.py  test_memory_store.py  test_model_assets.py  test_mouth_sync.py  test_offline_asr.py  test_pose.py  test_realtime_websocket.py  test_semantic_vlm_server.py  test_sherpa_tts.py  test_tts_control_server.py  test_vad.py  test_voxcpm_cpp_module.py  test_voxcpm_local_module.py  test_web_context.py
main/visual-perception/: README.md  config.yaml  pipeline.py  requirements.txt  server.py
main/visual-perception/fusion/: gesture.py  head_pose.py  state.py
main/visual-perception/models/: base.py  emotion.py  face_detector.py  face_landmarks.py  pose_estimator.py
main/visual-perception/tools/: download_models.py
new_code/backend/: pyproject.toml
new_code/backend/scripts/: benchmark_memory.py
new_code/backend/tests/: test_deepseek.py  test_demo.py  test_gateway.py  test_local_vlm.py  test_memory.py  test_memory_curator.py  test_personalization.py  test_reply_pipeline.py  test_runtime.py  test_session.py  test_sherpa_asr.py  test_sherpa_tts.py  test_visual_scheduler.py
(+288 files in other folders)
