[project]
name = "visual-companion-robot"
version = "0.1.0"
description = "Firefly/RK3588 side visual companion robot application."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "PyYAML>=6.0,<7.0",
  "numpy>=1.24",
  "requests>=2.31",
]

[project.optional-dependencies]
vision = [
  "opencv-python>=4.9,<5.0",
  "onnxruntime>=1.18",
  "Pillow>=10.0",
]
audio = [
  "sherpa-onnx>=1.10",
  "webrtcvad-wheels>=2.0.14; platform_system == 'Windows'",
  "webrtcvad>=2.0; platform_system != 'Windows'",
]
test = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

